[package]
name = "gamma-swap-api"
version = "0.1.0"
edition = "2021"
default-run = "gamma-swap-api"

[dependencies]
anchor-lang = "0.30.1"
anyhow = "1.0.89"
arrayref = "0.3.9"
async-trait = "0.1.82"
axum = "0.6"
bincode = "1.3.3"
dotenv = "0.15.0"
env_logger = "0.11.5"
jupiter-swap-api-client = { git = "https://github.com/GooseFX1/jupiter-swap-api-client.git", branch = "patch/0.1.0" }
gamma = { git = "https://github.com/GooseFX1/gamma-swap.git", rev = "24f90c58d63504c4c5400130e0e6f5e80fa89700" }
log = "0.4.22"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "=1.18"
solana-sdk = "=1.18"
solana-account-decoder = "=1.18"
solana-rpc-client-api = "=1.18"
solana-program-runtime = "=1.18"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
spl-associated-token-account = "2"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
rand = "0.8.5"
rust_decimal = { version = "1", features = ["maths", "c-repr"] }
serde_qs = "0.13.0"
dashmap = "6.1.0"
clap = { version = "4.5.18", features = ["derive", "env"] }
futures = "0.3.30"
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.15.0+solana.1.18" }
geyser-grpc-connector = { tag = "v0.10.6+yellowstone.1.15+solana.1.18", git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git" }
tokio-stream = "0.1.16"
serde_path_to_error = "0.1.16"




