[package]
name = "gamma-swap-api"
version = "0.1.0"
edition = "2021"
default-run = "gamma-swap-api"

[dependencies]
anchor-lang = "0.29.0"
anchor-client = "0.29.0"
anyhow = "1.0.89"
arrayref = "0.3.9"
async-trait = "0.1.82"
axum = "0.6"
bincode = "1.3.3"
bs58 = { version = "0.5.0"}
csv = "1.3.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", branch = "release/0.1.0" }
gamma = { git = "https://github.com/GooseFX1/gamma-swap.git", rev = "399250bd857b4278cac1c3e2ad45a235dd9d3af4" }
hex = "0.4.3"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.17"
solana-sdk = "1.17"
solana-account-decoder = "1.17"
solana-rpc-client-api = "1.17"
solana-transaction-status = "1.17"
swap_api = { package = "jupiter-swap-api-client", git = "https://github.com/GooseFX1/jupiter-swap-api-client.git", branch = "patch/0.1.0" }
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
spl-associated-token-account = "2"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
rand = "0.8.5"
rust_decimal = { version = "1", features = ["maths", "c-repr"] }
serde_qs = "0.13.0"
dashmap = "6.1.0"
clap = { version = "4.5.18", features = ["derive", "env"] }
futures = "0.3.30"
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.15.0+solana.1.18" }
geyser-grpc-connector = { tag = "v0.10.6+yellowstone.1.15+solana.1.18", git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git" }
tokio-stream = "0.1.16"
serde_path_to_error = "0.1.16"




